# pay2live

./: .dockerignore  .editorconfig  .gitignore  .prettierrc  Dockerfile  README.md  app.py  compose.yml  config.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  util.py  vercel.json
.github/workflows/: build.yml
classes/: Appointment.py  User.py  __init__.py
pay2live/: __init__.py  vercel.json
pay2live/routes/: __init__.py  index.py  login.py
pay2live/routes/api/: send_otp.py  verify_otp.py
pay2live/static/js/: main.js
pay2live/templates/: index.html
routes/: __init__.py  about.py  admin.py  appointments.py  calendar.py  cart.py  checkout.py  checkout_complete.py  contact.py  index.py  login.py  logout.py  new_appointments.py  profile.py  queue.py  register.py  shop.py
routes/api/: __init__.py  delete_user.py  get_queue.py  get_user.py  register.py  send_otp.py  update_user.py  verify_otp.py
routes/api/admin/: add_shop.py  add_user.py  delete_order.py  delete_shop.py  delete_user.py  update_order.py  update_shop.py  update_user.py
static/css/: input.css  output.css
static/js/: admin.js  appointments.js  checkout.js  contact.js  login.js  main.js  manage_queue.js  profile.js  queue.js  register.js  shop.js
templates/: about.html  admin.html  appointments.html  calendar.html  cart.html  checkout.html  checkout_complete.html  contact.html  edit_appointment.html  index.html  login.html  manage_queue.html  profile.html  queue.html  register.html  shop.html
templates/includes/: head.html  navbar.html
(+22 files in other folders)
