[project]
name = "pay2live"
version = "0.1.0"
description = "24S2 IT1966 App Development Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "pymongo[srv]>=4.10.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tzdata>=2025.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
]
